--- a/Home-Page/index.css
+++ b/Home-Page/index.css
@@ -117,7 +117,7 @@ body {
 .hamburger {
   grid-area: header;
   visibility: hidden;
-  height: 100%;
+  height: 100vh;
   display: flex;
   flex-direction: column;
   z-index: 5;
