--- a/Home-Page/responsive.css
+++ b/Home-Page/responsive.css
@@ -9,10 +9,7 @@
   }
 }
 @media screen and (max-width: 750px) {
-  .card-product-category {
-    grid-template-columns: 1fr;
-  }
-  .card__container--demo {
+  .card-product-category, .card__container--demo{
     grid-template-columns: 1fr;
   }
 }
