--- a/Home-Page/index.css
+++ b/Home-Page/index.css
@@ -324,7 +324,7 @@ main {
   display: grid;
   gap: 20px;
   grid-template-rows: auto;
-  grid-template-columns: repeat(auto-fit, minmax(18rem, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));
 }
 .card-product__wrapper {
   display: flex;
@@ -361,7 +361,7 @@ main {
 }
 .card-product__btn {
   padding: 8px;
-  font-size: var(--font-size-small);
+  font-size: var(--font-size-regular);
   font-weight: 600;
   width: 50%;
   border: 2px solid var(--primary-color);
@@ -389,7 +389,8 @@ main {
   background-color: rgb(255, 255, 255);
   display: inline-block;
   padding: 5px;
-  font-weight: 900;
+  font-weight: 600;
+  font-size: var(--font-size-small);
   color: rgb(0, 0, 0);
   border-radius: 0.2rem;
   position: absolute;
