--- a/Product-Page/product.css
+++ b/Product-Page/product.css
@@ -35,10 +35,12 @@ body {
   font-family: "Montserrat", sans-serif;
   display: grid;
   grid-template-rows: 2.5rem auto 5rem;
+  grid-template-columns: 250px auto;
+
   grid-template-areas:
-    "header"
-    "main"
-    "footer";
+    "header header header"
+    "sidebar main main"
+    "sidebar footer footer";
 }
 
 /*****Navigation Bar For Desktop *****/
@@ -170,6 +172,40 @@ body {
   border: 2px solid var(--primary-color);
 }
 
+/***** sidebar *****/
+.sidebar {
+  visibility: visible;
+  position: fixed;
+  grid-area: sidebar;
+  width:250px;
+  height: 100%;
+  overflow-y: scroll;
+  overflow-x: hidden;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  color: var(--primary-color);
+  border-right: 3px solid var(--primary-color);
+  background-color: var(--primary-bg-color);
+}
+.sidebar__title {
+  margin: 1rem;
+  padding: 8px 1rem;
+  border-radius: 8px;
+  font-size: var(--font-size-large);
+  color:var(--white-color);
+  background-color: var(--primary-bg);
+}
+.sidebar__item {
+  font-size: var(--font-size-large);
+  margin: 12px;
+  padding: 5px;
+  color: var(--primary-color);
+}
+.sidebar__item:hover {
+  color: var(--secondary-bg);
+}
+
 main {
   grid-area: main;
   background-color: var(--secondary-bg-color);
@@ -247,6 +283,7 @@ main {
 /***** footer *****/
 
 .footer {
+  border-top: 3px solid var(--primary-color);
   grid-area: footer;
   padding: 8px;
   display: flex;
