--- a/Product-Page/product.css
+++ b/Product-Page/product.css
@@ -180,7 +180,6 @@ body {
   width:250px;
   height: 100%;
   padding: 5rem 1rem;
-  overflow-y: scroll;
   display: flex;
   flex-direction: column;
   border-right: 3px solid var(--primary-color);
@@ -199,7 +198,7 @@ input::placeholder{
 }
 /** Filter **/
 .sidebar--filter{
-  margin: 1rem 0 ;
+  margin: 5px 0 ;
   color: var(--primary-color);
   padding: 8px;
 }
@@ -208,9 +207,25 @@ input::placeholder{
 }
 .sidebar__item{
   color: var(--primary-color);
-  padding: 4px; 
+  padding: 2px; 
 }
-
+.sidebar__btn{
+  margin-top: 1rem;
+  text-align: center;
+}
+.sidebar__btn--clear-filter{
+  padding: 4px 8px;
+  font-weight: 700;
+  font-size: var(--font-size-regular);
+  color: var(--primary-color);
+  background-color: var(--white-color);
+  border: 2px solid var(--primary-color);
+  border-radius: 5px;
+}
+.sidebar__btn--clear-filter:hover{
+  color:var(--white-color);
+  background-color: var(--primary-color);
+}
 
 main {
   grid-area: main;
