--- a/Cart-Page/cart-Responsive.css
+++ b/Cart-Page/cart-Responsive.css
@@ -1,6 +1,17 @@
 @media screen and (max-width: 975px) {
-    .card-product{
+    .card-product,.cart__detail{
       margin: 1em 2em;
+    }
+  }
+  @media screen and (max-width: 650px) {
+    .cart__content{
+      grid-template-columns: 1fr;
+    }
+    .cart__detail{
+      order:1;
+    }
+    .card-product{
+      order:2;
     }
   }
   @media screen and (max-width: 550px) {
@@ -22,4 +33,3 @@
   }
   }
   
-    
