--- a/Home-Page/index.css
+++ b/Home-Page/index.css
@@ -40,7 +40,15 @@ body {
     "main"
     "footer";
 }
-
+.https://trendy-t.netlify.app/{
+  background:url("/assets/image/HomePage-Images/Preloader.gif") no-repeat center center;
+  background-size: 15%;
+  background-color: rgb(43, 42, 42);
+  height: 100vh;
+  width: 100%;
+  position: fixed;
+  z-index:100;
+}
 /*****Navigation Bar For Desktop *****/
 
 .nav-bar {
