--- a/Cart-Page/cart.css
+++ b/Cart-Page/cart.css
@@ -41,6 +41,16 @@ body {
     "footer";
 }
 
+.preloader{
+  background:url("/assets/image/HomePage-Images/Preloader.gif") no-repeat center center;
+  background-size: 25%;
+  background-color: rgb(43, 42, 42);
+  height: 100vh;
+  width: 100%;
+  position: fixed;
+  z-index:100;
+}
+
 /*****Navigation Bar For Desktop *****/
 
 .nav-bar {
