--- a/Home-Page/index.css
+++ b/Home-Page/index.css
@@ -40,9 +40,9 @@ body {
     "main"
     "footer";
 }
-.https://trendy-t.netlify.app/{
+.preloader{
   background:url("/assets/image/HomePage-Images/Preloader.gif") no-repeat center center;
-  background-size: 15%;
+  background-size: 25%;
   background-color: rgb(43, 42, 42);
   height: 100vh;
   width: 100%;
