--- a/Signup-page/signup.css
+++ b/Signup-page/signup.css
@@ -202,6 +202,17 @@ main {
   font-size: var(--font-size-regular);
   font-weight: 600;
 }
+.signup-form--password-wrapper{
+  position: relative;
+}
+.signup-form__input--password{
+  width: 100%;
+}
+.signup-form__input--password-hide-icon{
+  position:absolute;
+  right:5px;
+  top:45%;
+}
 .signup-form--name-wrapper ,.signup-form--password-wrapper{
   display: flex;
   flex-direction: column;
